# vultr_app

./: .gitignore  LICENSE  README.md  buildozer.spec  main.py  openapi.json  pyproject.toml
src/vultr_cli/: __init__.py
src/vultr_cli/api/: __init__.py  client.py
src/vultr_cli/ui/: __init__.py  app.py
src/vultr_cli/utils/: __init__.py
