[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vultr-cli"
version = "0.1.0"
description = "An Android application for managing Vultr cloud services"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LNOVICE", email = "your.email@example.com"},
]
keywords = ["vultr", "cloud", "api", "mobile", "android"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "kivy>=2.1.0",
    "requests>=2.31.0",
    "certifi>=2023.7.22",
    "urllib3>=1.26.18",
    "charset-normalizer>=3.3.0",
    "idna>=3.4",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
android = [
    "buildozer>=1.5.0",
    "python-for-android>=2023.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vultr-cli"
Repository = "https://github.com/yourusername/vultr-cli"
Issues = "https://github.com/yourusername/vultr-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vultr_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true